--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,5 @@
-sonar.projectKey=vmsilvamolina_testingRepo
-sonar.organization=vmsilvamolina
-
+sonar.projectKey=MateEsp0_sonarQubeRepo
+sonar.organization=mateesp0
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=testingRepo
