--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,9 @@
 sonar.projectKey=MateEsp0_sonarQubeRepo
 sonar.organization=mateesp0
 
+
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=testingRepo
+#sonar.projectName=sonarQubeRepo
 #sonar.projectVersion=1.0
 
 
